# whiteline_simulator_cpp

./: CMakeLists.txt  README.md  package.xml
config/: soccer_field_visualization.rviz  whiteline_visualization.rviz
data/: points.txt  soccer_field_landmarks.txt  soccer_field_points.txt
include/whiteline_simulator_cpp/: pose.hpp  preprocessor.hpp
launch/: whiteline_simulator.launch.py  whiteline_simulator_keyboard.launch.py
src/: preprocessor.cpp  soccer_field_generator.cpp  whiteline_listener.cpp  whiteline_simulator_node.cpp
